feat: openapi extra params
